--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -115,6 +115,7 @@
       ></elvia-card>
     </div>
   </div>
+
   <!--Carousel-->
   <div class="example-wrapper">
     <h3>Carousel</h3>
@@ -181,11 +182,47 @@
     </div>
   </div>
 
+  <!-- Context menu -->
+  <div class="example-wrapper">
+    <h3>Context menu</h3>
+    <elvia-context-menu (onOpen)="isContextMenuShowing = true" (onClose)="isContextMenuShowing = false">
+      <button
+        slot="trigger"
+        class="e-btn e-btn--icon"
+        [ngClass]="{ 'e-btn---selected': isContextMenuShowing }"
+        aria-label="More menu"
+        aria-haspopup="menu"
+      >
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--more_menu e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--more_menu" aria-hidden="true"></i>
+        </span>
+      </button>
+
+      <div slot="content">
+        <div class="ewc-context-menu__list-group">
+          <button role="menuitem">
+            <span>Be om tilgang</span>
+          </button>
+          <button role="menuitem">
+            <span>Legg til bruker</span>
+          </button>
+        </div>
+        <div class="ewc-context-menu__list-group">
+          <a role="menuitem">
+            <span>Endre passord</span>
+          </a>
+        </div>
+      </div>
+    </elvia-context-menu>
+  </div>
+
   <!--Datepicker-->
   <div class="example-wrapper">
     <h3>DatePicker</h3>
     <elvia-datepicker [value]="date" (valueOnChange)="writeDate($event.detail.value)"></elvia-datepicker>
   </div>
+
   <!--Date range picker-->
   <div class="example-wrapper">
     <h3>Date range picker</h3>
@@ -262,13 +299,13 @@
       (onOpen)="isPopoverShowing = true"
       (onClose)="isPopoverShowing = false"
       heading="BankID"
-      horizontalPosition="right"
+      horizontalPosition="left"
       verticalPosition="top"
       width="200"
     >
       <button slot="trigger" class="e-btn">Show popover</button>
       <div slot="content">
-        Alle privatkunder må bruke BankID første gang. Alle privatkunder må bruke BankID første gang.
+        <p class="e-text-md e-my-16">Alle privatkunder må bruke BankID første gang.</p>
         <button class="e-btn" (click)="isPopoverShowing = !isPopoverShowing">Lukke popover</button>
       </div>
     </elvia-popover>
