--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -209,7 +209,7 @@
           </button>
         </div>
         <div class="ewc-context-menu__list-group">
-          <a role="menuitem">
+          <a href="#" role="menuitem">
             <span>Endre passord</span>
           </a>
         </div>
