feat(toggle): add support for label on each side

--- a/packages/elvis/src/components/form/toggle.scss
+++ b/packages/elvis/src/components/form/toggle.scss
@@ -1,8 +1,7 @@
-@use '../../variables/colors';
-@use '../../variables/animation';
-@use '../../utilities/outline';
-@use '../../utilities/breakpoints';
 @use '../../utilities/helpers';
+@use '../../utilities/outline';
+@use '../../variables/colors';
+@use '../../variables/typography.scss';
 
 $toggle-border-radius: 50px;
 
@@ -21,6 +20,7 @@ $toggle-inverted-slider-padding: calc((#{$toggle-inverted-height} - #{$toggle-sl
   flex-direction: row;
   align-items: center;
   cursor: pointer;
+  gap: 8px;
 
   // Label
   font-family: 'Red Hat Text', Verdana, sans-serif;
@@ -51,10 +51,11 @@ $toggle-inverted-slider-padding: calc((#{$toggle-inverted-height} - #{$toggle-sl
   &__input {
     position: relative;
     width: $toggle-width;
-    height: 0;
-    margin: -16px 0 0 8px;
+    height: 16px;
     outline: none;
     cursor: pointer;
+    flex: none;
+    margin: 0;
 
     // Background
     &::before {
@@ -68,6 +69,7 @@ $toggle-inverted-slider-padding: calc((#{$toggle-inverted-height} - #{$toggle-sl
       border-radius: $toggle-border-radius;
       cursor: pointer;
     }
+
     // Switch
     &::after {
       content: '';
