--- a/packages/elvis/src/components/form/toggle.scss
+++ b/packages/elvis/src/components/form/toggle.scss
@@ -23,14 +23,7 @@ $toggle-inverted-slider-padding: calc((#{$toggle-inverted-height} - #{$toggle-sl
   gap: 8px;
 
   // Label
-  font-family: 'Red Hat Text', Verdana, sans-serif;
-  font-size: 16px;
-  line-height: 22px;
-  font-weight: 400;
-  font-style: unset;
-  letter-spacing: unset;
-  text-transform: unset;
-  color: colors.color('font-color');
+  @include typography.typography('text-medium');
 
   // Larger touch-target
   &::after {
@@ -83,6 +76,11 @@ $toggle-inverted-slider-padding: calc((#{$toggle-inverted-height} - #{$toggle-sl
       transition: 0.1s;
       cursor: pointer;
     }
+  }
+
+  &.e-toggle--compact {
+    // Compact Label
+    @include typography.typography('text-small');
   }
 
   // Checked
