--- a/packages/elvis/percy/components/toggle.html
+++ b/packages/elvis/percy/components/toggle.html
@@ -7,58 +7,233 @@
     <script src="../../elvis.js"></script>
   </head>
   <body>
-    <div class="e-title-sm e-mt-16">Toggle</div>
-    <div class="e-title-xs e-my-16">States</div>
-    <label class="e-toggle" role="switch">
+    <h1 class="e-title-sm e-mt-16">Toggle</h1>
+    <h2 class="e-title-xs e-my-16">Normal Size</h2>
+    <h3 class="e-my-16">Label left</h3>
+    <h4 class="e-my-16">States</h4>
+    <label class="e-toggle">
       Off
-      <input class="e-toggle__input" type="checkbox" />
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
     </label>
-    <label class="e-toggle e-mt-16" role="switch">
+    <label class="e-toggle e-toggle---checked e-mt-16">
       On
-      <input class="e-toggle__input" type="checkbox" checked />
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked />
     </label>
-    <label class="e-toggle e-mt-16" role="switch">
+    <label class="e-toggle e-toggle---disabled e-mt-16">
       Disabled off
-      <input class="e-toggle__input" type="checkbox" disabled />
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" disabled />
     </label>
-    <label class="e-toggle e-mt-16" role="switch">
+    <label class="e-toggle e-toggle---disabled e-toggle---checked e-mt-16">
       Disabled on
-      <input class="e-toggle__input" type="checkbox" checked disabled />
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked disabled />
     </label>
-    <div class="e-title-xs e-my-16">Pseudos</div>
-    <label class="e-toggle e-toggle---checked e-mt-16" role="switch">
+    <h4 class="e-my-16">Pseudos</h4>
+    <label class="e-toggle e-toggle---checked e-mt-16">
       Checked
-      <input class="e-toggle__input" type="checkbox" />
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" />
     </label>
-    <label class="e-toggle e-toggle---focus e-mt-16" role="switch">
+    <label class="e-toggle e-toggle---focus e-mt-16">
       Focus
-      <input class="e-toggle__input" type="checkbox" />
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
     </label>
-    <div class="e-bg-grey">
-      <label class="e-toggle e-toggle--inverted" role="switch">
+
+    <div class="e-bg-grey e-my-16">
+      <label class="e-toggle e-toggle--inverted">
         Off
-        <input class="e-toggle__input" type="checkbox" />
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
       </label>
-      <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+      <label class="e-toggle e-toggle---checked e-toggle--inverted e-mt-16">
         On
-        <input class="e-toggle__input" type="checkbox" checked />
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked />
       </label>
-      <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+      <label class="e-toggle e-toggle---disabled e-toggle--inverted e-mt-16">
         Disabled off
-        <input class="e-toggle__input" type="checkbox" disabled />
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" disabled />
       </label>
-      <label class="e-toggle e-toggle--inverted e-mt-16" role="switch">
+      <label class="e-toggle e-toggle---checked e-toggle---disabled e-toggle--inverted e-mt-16">
         Disabled on
-        <input class="e-toggle__input" type="checkbox" checked disabled />
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked disabled />
       </label>
-      <div class="e-title-xs e-my-16">Pseudos</div>
-      <label class="e-toggle e-toggle--inverted e-toggle---checked e-mt-16" role="switch">
+      <h4 class="e-my-16">Pseudos</h4>
+      <label class="e-toggle e-toggle--inverted e-toggle---checked e-mt-16">
         Checked
-        <input class="e-toggle__input" type="checkbox" />
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" />
       </label>
-      <label class="e-toggle e-toggle--inverted e-toggle---focus e-mt-16" role="switch">
+      <label class="e-toggle e-toggle--inverted e-toggle---focus e-mt-16">
         Focus
-        <input class="e-toggle__input" type="checkbox" />
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+      </label>
+    </div>
+
+    <h3 class="e-my-16">Label Right</h3>
+    <h4 class="e-my-16">States</h4>
+    <label class="e-toggle">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+      Off
+    </label>
+    <label class="e-toggle e-toggle---checked e-mt-16">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked />
+      On
+    </label>
+    <label class="e-toggle e-toggle---disabled e-mt-16">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" disabled />
+      Disabled off
+    </label>
+    <label class="e-toggle e-toggle---disabled e-toggle---checked e-mt-16">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked disabled />
+      Disabled on
+    </label>
+    <h4 class="e-my-16">Pseudos</h4>
+    <label class="e-toggle e-toggle---checked e-mt-16">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" />
+      Checked
+    </label>
+    <label class="e-toggle e-toggle---focus e-mt-16">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+      Focus
+    </label>
+
+    <div class="e-bg-grey e-my-16">
+      <label class="e-toggle e-toggle--inverted">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+        Off
+      </label>
+      <label class="e-toggle e-toggle---checked e-toggle--inverted e-mt-16">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked />
+        On
+      </label>
+      <label class="e-toggle e-toggle---disabled e-toggle--inverted e-mt-16">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" disabled />
+        Disabled off
+      </label>
+      <label class="e-toggle e-toggle---checked e-toggle---disabled e-toggle--inverted e-mt-16">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked disabled />
+        Disabled on
+      </label>
+      <h4 class="e-my-16">Pseudos</h4>
+      <label class="e-toggle e-toggle--inverted e-toggle---checked e-mt-16">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" />
+        Checked
+      </label>
+      <label class="e-toggle e-toggle--inverted e-toggle---focus e-mt-16">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+        Focus
+      </label>
+    </div>
+    <h2 class="e-title-xs e-my-16">Compact Size</h2>
+    <h3 class="e-my-16">Label left</h3>
+    <h4 class="e-my-16">States</h4>
+    <label class="e-toggle e-toggle--compact">
+      Off
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+    </label>
+    <label class="e-toggle e-toggle--compact e-toggle---checked e-mt-16">
+      On
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked />
+    </label>
+    <label class="e-toggle e-toggle--compact e-toggle---disabled e-mt-16">
+      Disabled off
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" disabled />
+    </label>
+    <label class="e-toggle e-toggle--compact e-toggle---disabled e-toggle---checked e-mt-16">
+      Disabled on
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked disabled />
+    </label>
+    <h4 class="e-my-16">Pseudos</h4>
+    <label class="e-toggle e-toggle--compact e-toggle---checked e-mt-16">
+      Checked
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" />
+    </label>
+    <label class="e-toggle e-toggle--compact e-toggle---focus e-mt-16">
+      Focus
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+    </label>
+
+    <div class="e-bg-grey e-my-16">
+      <label class="e-toggle e-toggle--compact e-toggle--inverted">
+        Off
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+      </label>
+      <label class="e-toggle e-toggle--compact e-toggle---checked e-toggle--inverted e-mt-16">
+        On
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked />
+      </label>
+      <label class="e-toggle e-toggle--compact e-toggle---disabled e-toggle--inverted e-mt-16">
+        Disabled off
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" disabled />
+      </label>
+      <label
+        class="e-toggle e-toggle--compact e-toggle---checked e-toggle---disabled e-toggle--inverted e-mt-16"
+      >
+        Disabled on
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked disabled />
+      </label>
+      <h4 class="e-my-16">Pseudos</h4>
+      <label class="e-toggle e-toggle--compact e-toggle--inverted e-toggle---checked e-mt-16">
+        Checked
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" />
+      </label>
+      <label class="e-toggle e-toggle--compact e-toggle--inverted e-toggle---focus e-mt-16">
+        Focus
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+      </label>
+    </div>
+
+    <h3 class="e-my-16">Label Right</h3>
+    <h4 class="e-my-16">States</h4>
+    <label class="e-toggle e-toggle--compact">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+      Off
+    </label>
+    <label class="e-toggle e-toggle--compact e-toggle---checked e-mt-16">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked />
+      On
+    </label>
+    <label class="e-toggle e-toggle--compact e-toggle---disabled e-mt-16">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" disabled />
+      Disabled off
+    </label>
+    <label class="e-toggle e-toggle--compact e-toggle---disabled e-toggle---checked e-mt-16">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked disabled />
+      Disabled on
+    </label>
+    <h4 class="e-my-16">Pseudos</h4>
+    <label class="e-toggle e-toggle--compact e-toggle---checked e-mt-16">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" />
+      Checked
+    </label>
+    <label class="e-toggle e-toggle--compact e-toggle---focus e-mt-16">
+      <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+      Focus
+    </label>
+
+    <div class="e-bg-grey e-toggle--compact e-my-16">
+      <label class="e-toggle e-toggle--compact e-toggle--inverted">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+        Off
+      </label>
+      <label class="e-toggle e-toggle--compact e-toggle---checked e-toggle--inverted e-mt-16">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked />
+        On
+      </label>
+      <label class="e-toggle e-toggle--compact e-toggle---disabled e-toggle--inverted e-mt-16">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" disabled />
+        Disabled off
+      </label>
+      <label
+        class="e-toggle e-toggle--compact e-toggle---checked e-toggle---disabled e-toggle--inverted e-mt-16"
+      >
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" checked disabled />
+        Disabled on
+      </label>
+      <h4 class="e-my-16">Pseudos</h4>
+      <label class="e-toggle e-toggle--compact e-toggle--inverted e-toggle---checked e-mt-16">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="true" />
+        Checked
+      </label>
+      <label class="e-toggle e-toggle--compact e-toggle--inverted e-toggle---focus e-mt-16">
+        <input class="e-toggle__input" type="checkbox" role="switch" aria-checked="false" />
+        Focus
       </label>
     </div>
   </body>
