--- a/packages/web/src/app/doc-pages/components/forms/toggle-doc/toggle-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/toggle-doc/toggle-doc.component.html
@@ -56,11 +56,10 @@
       </app-component-subsection>
       <app-component-subsection [sectionTitle]="'No label'">
         <ng-container ngProjectAs="sectionContent">
-          The toggle is also available without a given label. You are
-          <strong>required</strong>
-          to create your custom labels. In case it is required, do not forget to supply the
+          Make your own custom label for the toggle by using no label, but don’t use a toggle without
+          providing some kind of label. Remember to add the
           <span class="code-text">aria-label</span>
-          attribute.
+          attribute for your custom label to meet accessibility requirements.
           <app-component-example-v1 [codeHTML]="exampleNoLabel"></app-component-example-v1>
         </ng-container>
       </app-component-subsection>
