docs: update docs

--- a/packages/web/src/app/doc-pages/components/carousel-doc/carousel-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/carousel-doc/carousel-doc.component.html
@@ -51,14 +51,14 @@
         <ng-container ngProjectAs="sectionContent">
           <div class="accessibility-keyboard-navigation">
             <div>
-              <span class="keyboard-button">Tab</span>
+              <span class="keyboard-button">ArrowLeft/ArrowRight</span>
               to navigate through the arrows and pages.
             </div>
             <div>
               <span class="keyboard-button">Space</span>
               or
               <span class="keyboard-button">Enter</span>
-              to select a carousel page or navigate with the arrow buttons.
+              to select a carousel page.
             </div>
           </div>
         </ng-container>
