--- a/packages/web/src/app/doc-pages/components/pagination-doc/pagination-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/pagination-doc/pagination-doc.component.html
@@ -29,15 +29,14 @@
         <ng-container ngProjectAs="sectionContent">
           <div class="accessibility-keyboard-navigation">
             <div>
+              <span class="keyboard-button">ArrowLeft/ArrowRight</span>
+              to navigate through the pagination elements and buttons.
+            </div>
+            <div>
               <span class="keyboard-button">Space</span>
               or
               <span class="keyboard-button">Enter</span>
-              to open or close the dropdown, to select a new page number inside the pagination and to navigate
-              with the arrows.
-            </div>
-            <div>
-              <span class="keyboard-button">Tab</span>
-              to navigate through the pagination elements and buttons.
+              to open or close the dropdown, to select a new page number inside the pagination.
             </div>
           </div>
         </ng-container>
