--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -24,7 +24,18 @@
       (onClose)="onClose()"
     >
       <div slot="content">
-        <h3>Hello there</h3>
+        <div class="e-text-lg" style="display: flex; flex-direction: column; justify-content: flex-start">
+          <label class="e-checkbox" for="elvis-checkbox">
+            <input type="checkbox" id="elvis-checkbox" />
+            <span class="e-checkbox__mark"></span>
+            <span class="e-checkbox__label">Checkbox option 1</span>
+          </label>
+          <label class="e-checkbox" for="elvis-checkbox2">
+            <input type="checkbox" id="elvis-checkbox2" />
+            <span class="e-checkbox__mark"></span>
+            <span class="e-checkbox__label">Checkbox option 2</span>
+          </label>
+        </div>
       </div>
     </elvia-accordion>
   </div>
