--- a/packages/elvis/src/components/form/checkbox.scss
+++ b/packages/elvis/src/components/form/checkbox.scss
@@ -70,6 +70,8 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
       opacity: 0;
       position: absolute;
       z-index: -1;
+      width: $checkbox-mark-compact-size;
+      height: $checkbox-mark-compact-size;
 
       &:checked ~ .e-checkbox__mark {
         @extend %checkbox-mark-compact;
@@ -183,6 +185,10 @@ $checkbox-mark-border: 1px solid colors.color('elvia-off');
     opacity: 0;
     position: absolute;
     z-index: -1;
+    width: $checkbox-mark-size;
+    height: $checkbox-mark-size;
+    margin: 0;
+    border-radius: 50%;
 
     &:checked ~ .e-checkbox__mark {
       @extend %checkbox-mark;
