Lego 2093 search et invalid search felt er for stort (#1172)
*make Search correct size when disabled

* fix(search): make magnifying glass icon centered

* feat(search): add support for loading styles

--- a/packages/elvis/src/components/form/search.scss
+++ b/packages/elvis/src/components/form/search.scss
@@ -1,6 +1,6 @@
 @use '../../variables/colors';
 @use '../../utilities/icons';
-@use '../../utilities/helpers';
+@use '../../variables/typography.scss';
 
 .e-search {
   position: relative;
@@ -9,20 +9,20 @@
     display: none;
   }
 
-  font-family: 'Red Hat Text', Verdana, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  color: colors.color('font-color');
+  @include typography.typography('text-md');
 
   &--instant {
     .e-input {
       input,
       input:invalid,
-      input:disabled {
+      input:disabled,
+      &.e-input---disabled input,
+      &.e-input---loading input {
         padding: 12px 48px 12px 56px;
       }
+      &.e-input---invalid input,
+      &.e-input---focus input,
+      &.e-input---loading input,
       input:focus {
         padding: 11px 47px 11px 55px;
       }
@@ -66,13 +66,19 @@
       }
     }
   }
+
   &--on-submit {
     .e-input {
       input,
       input:invalid,
-      input:disabled {
+      input:disabled,
+      &.e-input---loading input,
+      &.e-input---disabled input {
         padding: 12px 48px 12px 12px;
       }
+      &.e-input---invalid input,
+      &.e-input---focus input,
+      &.e-input---loading input,
       input:focus {
         padding: 11px 47px 11px 11px;
       }
@@ -111,15 +117,20 @@
 .e-form-field {
   &.e-form-field--compact {
     .e-search--instant {
-      font-size: 14px;
+      @include typography.typography('text-sm');
       margin-top: -8px;
       .e-input {
         input,
         input:invalid,
-        input:disabled {
+        input:disabled,
+        &.e-input---disabled input,
+        &.e-input---loading input {
           max-height: 34px;
           padding: 6px 32px 6px 32px;
         }
+        &.e-input---invalid input,
+        &.e-input---focus input,
+        &.e-input---loading input,
         input:focus {
           padding: 5px 31px 5px 31px;
         }
@@ -128,10 +139,11 @@
         visibility: visible;
         position: absolute;
         display: flex;
-        top: 10px;
+        top: 50%;
         left: 8px;
         height: 16px;
         width: 16px;
+        transform: translateY(-50%);
       }
       .e-btn {
         top: 1px;
@@ -144,10 +156,15 @@
       .e-input {
         input,
         input:invalid,
-        input:disabled {
+        input:disabled,
+        &.e-input---disabled input,
+        &.e-input---loading input {
           max-height: 34px;
           padding: 6px 32px 6px 10px;
         }
+        &.e-input---invalid input,
+        &.e-input---focus input,
+        &.e-input---loading input,
         input:focus {
           padding: 5px 31px 5px 9px;
         }
@@ -155,6 +172,31 @@
       .e-btn {
         top: 1px;
         right: 4px;
+      }
+    }
+  }
+
+  .e-search {
+    &--instant,
+    &--on-submit {
+      .e-input---disabled {
+        ~ i[class*='e-icon--search-color'] {
+          opacity: 30%;
+          cursor: not-allowed;
+        }
+
+        ~ .e-btn.e-btn--icon {
+          visibility: hidden;
+          .e-btn__icon {
+            i[class*='e-icon--close-bold'] {
+              visibility: hidden;
+            }
+          }
+        }
+
+        input:disabled::placeholder {
+          color: colors.color('grey-30') !important; //override ".e-input > input::placeholder"
+        }
       }
     }
   }
