--- a/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
+++ b/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
@@ -330,6 +330,7 @@ $pageIndentedMargin: 72px;
   .cms-display-image img {
     width: 100%;
     border-radius: 8px;
+    pointer-events: none;
   }
   .cms-downloadable-asset {
     display: flex;
