chore(playground): remove testing examples

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,18 +4,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <h3>Tabs</h3>
-      <elvia-tabs
-        [items]="['ametamet', 'ametametametamet1', 'adipiscingadipiscing', 'elvia', 'hamar', 'figma']"
-        [value]="1"
-      ></elvia-tabs>
-      <br />
-      <br />
-      <br />
-      <br />
-      <elvia-tabs [items]="['per', 'sitter', 'på', 'bussen', 'i dag']" [value]="1"></elvia-tabs>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
