update modal documentation

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -278,6 +278,7 @@
       [isShowing]="isModalShowing"
       [heading]="'Redigere bidragsytere'"
       [disableClose]="false"
+      [disableBackdrop]="true"
     >
       <div slot="content">Content</div>
       <button
