fix(autocomplete): fixed typo in file name
autcomplete -> autocomplete

--- a/packages/elvis/percy/components/autocomplete.html
+++ b/packages/elvis/percy/components/autocomplete.html
@@ -9,7 +9,7 @@
   <body>
     <div class="e-title-sm e-mt-16">File Upload</div>
 
-    <div class="e-title-xs e-my-16">Normal autcomplete</div>
+    <div class="e-title-xs e-my-16">Normal autocomplete</div>
     <div class="e-form-field">
       <label class="e-form-field__label" for="compact">Label</label>
       <div class="e-input" style="height: 155px">
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <div class="e-title-xs e-my-16">Compact autcomplete</div>
+    <div class="e-title-xs e-my-16">Compact autocomplete</div>
     <div style="width: 240px">
       <div class="e-form-field e-form-field--compact">
         <label class="e-form-field__label" for="compact">Label</label>
