--- a/packages/elvis/src/components/_main.scss
+++ b/packages/elvis/src/components/_main.scss
@@ -1,6 +1,6 @@
 @use 'accordion.scss';
 @use 'alert.scss';
-@use 'autcomplete.scss';
+@use 'autocomplete.scss';
 @use 'body.scss';
 @use 'button.scss';
 @use 'card.scss';
