--- a/packages/elvis/src/components/dropdown.scss
+++ b/packages/elvis/src/components/dropdown.scss
@@ -5,7 +5,7 @@
 @use './form/input.scss';
 @use '../utilities/outline.scss';
 @use '../utilities/icons.scss';
-@use './autcomplete.scss';
+@use './autocomplete.scss';
 
 // DEPRECATED
 .e-dropdown {
