--- a/packages/web/src/app/shell/header/header.component.scss
+++ b/packages/web/src/app/shell/header/header.component.scss
@@ -1,6 +1,7 @@
 @use '../../shared/shared-sizes.scss';
 @use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
 
+//DEPRECATED
 .header {
   position: fixed;
   height: 64px;
