--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -213,10 +213,12 @@
       <div slot="content">
         <div class="ewc-context-menu__list-group">
           <button role="menuitem">
-            <span>Be om tilgang</span>
+            <elvia-icon name="edit" size="xs"></elvia-icon>
+            <span>Oppdater og valider på nytt</span>
           </button>
           <button role="menuitem">
-            <span>Legg til bruker</span>
+            <elvia-icon name="bin" size="xs"></elvia-icon>
+            <span>Slett</span>
           </button>
         </div>
         <div class="ewc-context-menu__list-group">
@@ -238,6 +240,7 @@
   <div class="example-wrapper">
     <h3>Date range picker</h3>
     <elvia-datepicker-range></elvia-datepicker-range>
+    <elvia-datepicker-range hasTimepicker></elvia-datepicker-range>
   </div>
 
   <!--Divider-->
@@ -305,21 +308,6 @@
   <!--Popover-->
   <div class="example-wrapper">
     <h3>Popover</h3>
-    <elvia-popover
-      [isShowing]="isPopoverShowing"
-      (onOpen)="isPopoverShowing = true"
-      (onClose)="isPopoverShowing = false"
-      heading="BankID"
-      horizontalPosition="left"
-      verticalPosition="top"
-      width="200"
-    >
-      <button slot="trigger" class="e-btn">Show popover</button>
-      <div slot="content">
-        <p class="e-text-md e-my-16">Alle privatkunder må bruke BankID første gang.</p>
-        <button class="e-btn" (click)="isPopoverShowing = !isPopoverShowing">Lukke popover</button>
-      </div>
-    </elvia-popover>
   </div>
 
   <!--Progress linear-->
